<resources>
    <string name="app_name">FlyPass</string>
    <string name="hello_blank_fragment">Hello Blank Fragment</string>
    <string name="web_client_id">969352521893-enn7oi1nnsjm78fjpblqh7nq2ssp5knm.apps.googleusercontent.com</string>
    <string name="mobile_client_id">969352521893-05qu1n0gv58obbj755locm6o2ttnktgm.apps.googleusercontent.com</string>
    <string-array name="baggage_list">
        <item>20kg - Free</item>
        <item>20kg + 5kg - Rp 150.000</item>
        <item>20kg + 10kg - Rp 250.000</item>
        <item>20kg + 20kg - Rp 300.000</item>
    </string-array>
    <string name="title_on_boarding_1">"Anytime &amp; Anywhere"</string>

    <string name="default_time_format" translatable="false">yyyy-MM-dd\'T\'HH:mm:ss.SSS\'Z\'</string>
    <string name="date_format" translatable="false">MMM d, yyyy</string>
    <string name="time_format" translatable="false">HH:mm a</string>

    <!--  FlightPay  -->
    <string name="non_member_title">Hanya untuk member!</string>
    <string name="non_member_msg">Silahkan daftar sebagai member terlebih dahulu</string>
    <string name="non_member_btn_login">Login</string>
    <string name="non_member_btn_register">Register</string>

    <!--  Aktivasi Wallet  -->
    <string name="wallet_activation_title">Aktivasi wallet terlebih dahulu!</string>
    <string name="wallet_activation_msg">Transaksi tidak bisa dilakukan sebelum diaktivasi.</string>
    <string name="wallet_activation_btn">Aktivasi</string>

    <!--    Login   -->
    <string name="wrong_password_title">Password Anda Salah!</string>
    <string name="wrong_password_subtitle">Silahkan masukkan password yang benar.</string>
    <string name="wrong_email_title">Email Anda Salah!</string>
    <string name="wrong_email_subtitle">Silahkan masukkan email yang benar.</string>
    <string name="confirm_one_btn_dialog">OK, I got it!</string>

    <!--   Register -->
    <string name="empty_field_title">Input Kosong!</string>
    <string name="empty_field_subtitle">Pastikan input tidak kosong.</string>
    <string name="conf_password_not_match_title">Konfirmasi Password Salah!</string>
    <string name="conf_password_not_match_subtitle">Masukkan konfirmasi password sesuai dengan password.</string>
    <string name="email_already_exist_title">Email sudah pernah terdaftar!</string>
    <string name="email_already_exist_subtitle">Silahkan gunakan email yang lain.</string>
    <string name="register_success_title">Register Berhasil!</string>
    <string name="register_success_subtitle">Silahkan login terlebih dahulu.</string>
    <string name="register_success_btn">Login</string>

    <!--   Token Expired -->
    <string name="token_expired_title">Sesi Sudah Berakhir!</string>
    <string name="token_expired_subtitle">Sesi saat ini sudah berakhir. Silahkan lanjutkan proses login terlebih dahulu.</string>
    <string name="token_expired_login">Login</string>
    <string name="token_expired_register">Register</string>
    <string name="token_expired_later">Lanjutkan</string>

    <!--    Booking -->
    <string name="booking_empty_field_title">Data Belum Lengkap!</string>
    <string name="booking_empty_field_subtitle">Lengkapi semua data yang ada untuk menlanjutkaan proses.</string>

    <!--    Logout -->
    <string name="logout_confirm_title">Anda Yakin Logout?</string>
    <string name="logout_confirm_subtitle">Pastikan sesuatu lorem ipsum dolor sit amet.</string>
    <string name="logout_confirm_btn_yes">Logout</string>
    <string name="logout_confirm_btn_no">Nanti Saja</string>

    <!--    Wishlist -->
    <string name="wishlist_add_title">Tiket Berhasil Tersimpan.</string>
    <string name="wishlist_add_subtitle">Simpan tiket keinginanmu dan pesan kapan saja.</string>
    <string name="wishlist_add_btn">Oke</string>

    <string name="currency">Rp </string>
    <string name="latest_transaction">Transaksi Terakhir</string>
    <string name="topup">Jumlah Top Up (Rp)</string>
    <string name="top20">20.000</string>
    <string name="top50">50.000</string>
    <string name="top100">100.000</string>
    <string name="top200">200.000</string>
    <string name="top300">300.000</string>
    <string name="top500">500.000</string>
    <string name="topup_input">Masukkan Jumlah (Rp)</string>
    <string name="payment">Pembayaran</string>
    <string name="topup_nominal">Top Up</string>
    <string name="total_topup">Total Pembayaran</string>
    <string name="pay_now">Bayar Sekarang</string>
    <string name="success">Behasil</string>
    <string name="flight_pay">Flight Pay</string>
    <string name="home">Home</string>

    <string name="login_dialog_title">Login Account</string>
    <string name="login_dialog_login_btn">Login</string>
    <string name="login_dialog_google_btn">Login with Google</string>

    <string name="payment_method">Metode Pembayaran</string>
    <string name="any_bank">Pembayaran bisa lewat bank manapun.</string>
    <string name="bca_oneklik">BCA OneKlik</string>
    <string name="instan_debit">Debit Instan</string>
    <string name="bni">Transfer Bank BNI</string>
    <string name="bri">Transfer Bank BRI</string>
    <string name="free_admin">Bebas Biaya Admin</string>
    <string name="payment_proof">Kirim Bukti Pembayaran</string>
    <string name="upload_payment">Bukti pembayaran bisa upload dibawah ini berupa foto </string>
    <string name="payment_eng">Payment</string>
    <string name="payment_method_eng">Payment Method</string>
    <string name="price">Price</string>
    <string name="adds_on">Adds On</string>
    <string name="total_price">Total Price</string>
    <string name="confirm">Confirm</string>

    <!--  Not Enough Balance  -->
    <string name="not_enough_balance_title">Saldo Tidak Cukup !</string>
    <string name="not_enough_balance_msg">Silahkan isi saldo anda terlebih dahulu</string>
    <string name="top_up_balance_btn">Ke Menu Top Up</string>
    <string name="maybe_later">Nanti Saja</string>

    <!--  Continue Booking Process  -->
    <string name="continue_booking_process_title">Lanjutkan Pembayaran Booking?</string>
    <string name="continue_booking_process_msg">Proses booking belum selesai. Silahkan lanjutkan proses pembayaran!</string>
    <string name="continue_booking_process_btn_continue">Lanjutkan</string>

    <string name="payment_success_with_trf_msg">Please wait for admin confirmation</string>
    <string name="forgot_pin_number"><u>Forgot Pin Number?</u></string>

    <!--  Forgot Pin Number  -->
    <string name="forgot_pin_title">Forgot Pin Number?</string>
    <string name="forgot_pin_msg">Your latest pin will be remove.</string>
    <string name="forgot_pin_continue_btn">Continue</string>
    <string name="forgot_pin_cancel_btn">Cancel</string>

    <string name="member_only_title">Fitur Member</string>
    <string name="member_only_msg">Segera daftarkan dirimu menjadi member.</string>

    <string name="feature_not_available_title">Fitur Belum Tersedia</string>
    <string name="feature_not_available_msg">Terus pantau aplikai kita.</string>
    
    
</resources>