<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".ui.flightpay.TopUpSuccessFragment"
    android:background="#F4F4F4"
    android:orientation="vertical">
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        app:cardElevation="10dp"
        android:layout_margin="20dp"
        app:cardCornerRadius="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:src="@drawable/ic_baseline_check_circle_24"
                app:tint="#1CE254"
                android:layout_marginTop="54dp"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textColor="#1CE254"
                android:text="@string/success"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginBottom="20dp"/>
            <TextView
                android:id="@+id/tv_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="26 Nov 2022, 15:47"
                android:textSize="12sp"
                android:textColor="#434343"
                android:textAlignment="center"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|top"
                android:layout_marginBottom="47dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/currency"
                    android:textColor="#434343"
                    android:textStyle="bold"
                    android:textSize="12sp"/>
                <TextView
                    android:id="@+id/tv_nominal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="20.000"
                    android:textColor="#434343"
                    android:textStyle="bold"
                    android:textSize="20sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="22dp">
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/btnFlightPay"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#007AFF"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="20dp"
                    app:cardElevation="7dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:gravity="center">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:text="@string/flight_pay"
                            android:textSize="14sp"/>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/btnHome"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    app:cardElevation="7dp"
                    app:strokeColor="#C8C8C8"
                    app:strokeWidth="1dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:gravity="center">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#007AFF"
                            android:text="@string/home"
                            android:textSize="14sp"/>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>